# Neoethos

./: .env.example  .gitattributes  .gitignore  BOTTLENECK_ANALYSIS.md  BOTTLENECK_DETAILS.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.txt  HPC_CLOUD_IMPLEMENTATION.md  HPC_INTEGRATION_SUMMARY.md  HPC_UNIFIED_MODE.md  LICENSE  LICENSE-gemma  MIGRATION_PROGRESS.md  NOTICE  PRINCIPLES.md  PRIVACY.md  README.el.md  README.md  REPORT_CODEX_MASTER_PLAN_2026-04-18.md  RUST_LIBRARY_RECOMMENDATIONS.md  RUST_MIGRATION_PLAN.md  SMT_THREAD_CONFIGURATION.md  api-test-report.json  check_errors.txt  config-local-risky.yaml  config-vps-a6000.yaml  config.wsl.yaml  config.yaml  cubecl.toml  forex-ai.py  forex-bot.service  forex_ai_master_report.md  pyproject.toml  requirements-hpc.txt  rust-toolchain.toml  start_training_wsl.sh  test_bot_rust.py  (+3 more)
crates/forex-app/: Cargo.toml  build.rs  errors.txt  packager.json
crates/forex-app/proto/: OpenApiCommonMessages.proto  OpenApiCommonModelMessages.proto  OpenApiMessages.proto  OpenApiModelMessages.proto
crates/forex-app/src/: app_state.rs  main.rs
crates/forex-app/tests/: packaging_smoke.rs
crates/forex-bindings/: Cargo.toml  build_errors.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_final.txt  build_log_final_v2.txt  build_log_final_v3.txt  build_log_final_v4.txt  build_log_final_v5.txt  build_log_final_v6.txt  build_log_full.txt  pyproject.toml
crates/forex-bindings/src/: burn_bindings.rs  calibration.rs  conformal.rs  core.rs  data.rs  evaluation.rs  executor.rs  indicators.rs  inference.rs  lib.rs  models.rs  monitoring.rs  search.rs  training.rs  utils.rs  validation.rs
crates/forex-cli/: Cargo.toml  build.rs
crates/forex-cli/src/: main.rs
crates/forex-core/: Cargo.toml
crates/forex-core/src/: config.rs  contracts.rs  lib.rs  logging.rs  resolved_config.rs  schema_version.rs  sectioned_log.rs  storage.rs  symbol_metadata.rs  system.rs
crates/forex-core/tests/: sectioned_log.rs
crates/forex-data/: Cargo.toml
crates/forex-data/src/: lib.rs
crates/forex-gemma/: Cargo.toml  README.md
crates/forex-gemma/src/: anchors.rs  audit.rs  bridge.rs  config.rs  embedding.rs  error.rs  expert.rs  gate.rs  lib.rs  readonly_tools.rs  runtime.rs  suggestions.rs  tools.rs
crates/forex-models/: Cargo.toml
crates/forex-models/src/: base.rs  burn_models.rs  common.rs  deep_models.rs  ensemble.rs  ensemble_inference.rs  ensemble_tests.rs  evaluation_helpers.rs  evolution.rs  exit_agent.rs  exit_agent_tests.rs  genetic.rs  hardware.rs  lib.rs  neural_networks.rs  onnx_exporter.rs  parallel_trainer.rs  registry.rs  rl.rs  rustorch_models.rs  training_orchestrator.rs  transformer_nf.rs  transformers.rs  tree_models.rs  unsupervised.rs
crates/forex-models/tests/: integration_test.rs  tree_models_integration.rs  tree_portability_contract.rs
crates/forex-news/: Cargo.toml
crates/forex-news/src/: lib.rs  openai.rs  perplexity.rs
crates/forex-search/: Cargo.toml
crates/forex-search/src/: artifact_io.rs  challenge.rs  checkpoint.rs  cubecl_eval.rs  cubecl_ga.rs  discovery.rs  discovery_gpu.rs  discovery_tests.rs  eval.rs  export_state.rs  funnel_profile.rs  gauntlet.rs  genetic.rs  hpc.rs  hpc_gpu_discovery.rs  hpc_simd.rs  lib.rs  orchestration.rs  parity.rs  portfolio.rs  quality.rs  scheduler_assignment.rs  stop_target.rs  strategy_db.rs  validation.rs
crates/mt5-bridge/: Cargo.toml
crates/mt5-bridge/src/: lib.rs
crates/neoethos-app/: Cargo.toml  build.rs  neoethos-app.exe.manifest  packager.json
crates/neoethos-app/src/: app_state.rs  lib.rs  main.rs
crates/neoethos-app/tests/: packaging_smoke.rs  server_contract_tests.rs
crates/neoethos-cli/: Cargo.toml  build.rs
crates/neoethos-cli/src/: main.rs
crates/neoethos-codex/: Cargo.toml
crates/neoethos-codex/src/: auth_store.rs  callback.rs  client.rs  error.rs  lib.rs  oauth.rs  pkce.rs
crates/neoethos-core/: Cargo.toml
crates/neoethos-core/src/: broker_config.rs  config.rs  env_overrides.rs  lib.rs  logging.rs  resolved_config.rs  scheduler.rs  schema_version.rs  sectioned_log.rs  storage.rs  symbol_metadata.rs  system.rs
crates/neoethos-core/tests/: sectioned_log.rs
crates/neoethos-data/: Cargo.toml
crates/neoethos-data/src/: lib.rs  test_fixtures.rs
crates/neoethos-data/test_fixtures/: eurusd_m1_100bars.json
crates/neoethos-gemma/: Cargo.toml  README.md
crates/neoethos-gemma/src/: anchors.rs  api.rs  audit.rs  bridge.rs  config.rs  error.rs  expert.rs  gate.rs  lib.rs  readonly_tools.rs  runtime.rs  suggestions.rs
crates/neoethos-models/: Cargo.toml
crates/neoethos-models/examples/: gpu_probe.rs
crates/neoethos-models/src/: base.rs  burn_models.rs  common.rs  deep_models.rs  ensemble.rs  exit_agent.rs  exit_agent_tests.rs  genetic.rs  hardware.rs  lib.rs  parallel_trainer.rs  registry.rs  soft_actor_critic.rs  soft_actor_critic_tests.rs  training_orchestrator.rs
crates/neoethos-models/tests/: integration_test.rs  tree_models_integration.rs  tree_portability_contract.rs
crates/neoethos-news/: Cargo.toml
crates/neoethos-news/src/: lib.rs  openai.rs
crates/neoethos-search/: Cargo.toml
crates/neoethos-search/examples/: gpu_eval_bench.rs
crates/neoethos-search/src/: artifact_io.rs  challenge.rs  checkpoint.rs  cubecl_eval.rs  cubecl_ga.rs  discovery.rs  discovery_gpu.rs  discovery_ledger.rs  discovery_tests.rs  eval.rs  export_state.rs  funnel_profile.rs  gauntlet.rs  gpu_fallback.rs  hpc_gpu_discovery.rs  lane_partition.rs  lib.rs  live_portfolio.rs  orchestration.rs  parity.rs  portfolio.rs  quality.rs  scheduler_assignment.rs  stop_target.rs  validation.rs
crates/neoethos-trader/: Cargo.toml
crates/neoethos-trader/src/: blend_signal.rs  contracts.rs  data_replay.rs  decision.rs  (+9 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
mcp/: .gitignore  Cargo.toml  README.md  mcp_servers.example.json
mcp/src/: lib.rs  main.rs
mcp/tests/: lifecycle_and_approval.rs
mesh/: .gitignore  Cargo.toml  POOL_SPEC.md  README.md
mesh/src/: main.rs
(+1185 files in other folders)
