[workspace]
resolver = "3"
members = [
  "crates/neoethos-search",
  "crates/neoethos-cli",
  "crates/neoethos-data",
  "crates/neoethos-models",
  "crates/neoethos-core",
  "crates/neoethos-app",
  "crates/neoethos-news",
  "crates/neoethos-gemma",
]
default-members = [
  "crates/neoethos-search",
  "crates/neoethos-cli",
  "crates/neoethos-data",
  "crates/neoethos-models",
  "crates/neoethos-core",
  "crates/neoethos-app",
  "crates/neoethos-news",
  "crates/neoethos-gemma",
]

[workspace.package]
edition = "2024"

# ── Shared dependency versions (pinned once for the whole workspace) ──────────
[workspace.dependencies]
anyhow      = "1.0.100"
chrono      = { version = "0.4.44", features = ["serde"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"
tokio       = { version = "1.49.0", features = ["full"] }
tracing     = "0.1.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ndarray     = { version = "0.17.2", features = ["rayon"] }
rayon       = "1.11.0"
# reqwest >= 0.13.3 logs only the host, not the full URL — protects client_secret from leaking to debug/trace logs.
# In 0.13, `form`/`query` are opt-in features (per the 0.13.0 CHANGELOG).
reqwest     = { version = "0.13.3", default-features = false, features = ["rustls", "json", "query", "form"] }
rand        = "0.9.2"
nalgebra    = "0.33.0"
polars      = { version = "0.52.0", features = ["lazy", "dtype-datetime", "timezones"] }
thiserror   = "2.0.16"

[patch.crates-io]
lightgbm3-sys = { path = "vendor/lightgbm3-sys" }
# sklears-core patch removed 2026-05-21 (task #84) — the vendored copy
# was the stale v0.1.0 release and got bypassed once sklears upstream
# published 0.1.1 (which lifts the scirs2 stack to v0.4.4). Cargo was
# warning every build that the patch was not used. If we ever need to
# patch sklears-core again, regenerate the vendor copy at the version
# the crate graph actually resolves to.
rlkit = { path = "vendor/rlkit" }
