[workspace]
resolver = "3"
members = [
  "crates/neoethos-search",
  "crates/neoethos-cli",
  "crates/neoethos-data",
  "crates/neoethos-models",
  "crates/neoethos-core",
  "crates/neoethos-app",
  "crates/neoethos-news",
  "crates/neoethos-gemma",
]
default-members = [
  "crates/neoethos-search",
  "crates/neoethos-cli",
  "crates/neoethos-data",
  "crates/neoethos-models",
  "crates/neoethos-core",
  "crates/neoethos-app",
  "crates/neoethos-news",
  "crates/neoethos-gemma",
]

[workspace.package]
edition = "2024"

# ── Shared dependency versions (pinned once for the whole workspace) ──────────
[workspace.dependencies]
anyhow      = "1.0.100"
chrono      = { version = "0.4.44", features = ["serde"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"
tokio       = { version = "1.49.0", features = ["full"] }
tracing     = "0.1.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ndarray     = { version = "0.17.2", features = ["rayon"] }
rayon       = "1.11.0"
# reqwest >= 0.13.3 logs only the host, not the full URL — protects client_secret from leaking to debug/trace logs.
# In 0.13, `form`/`query` are opt-in features (per the 0.13.0 CHANGELOG).
reqwest     = { version = "0.13.3", default-features = false, features = ["rustls", "json", "query", "form"] }
rand        = "0.9.2"
nalgebra    = "0.33.0"
polars      = { version = "0.52.0", features = ["lazy", "dtype-datetime", "timezones"] }
thiserror   = "2.0.16"

# ── Release profile — public-testing distribution ────────────────────────────
# Defaults give opt-level=3 but leave LTO off, codegen-units=16, debug
# symbols inside the binary, and panic=unwind. For a public-testing
# release the bin is ~111 MB with that default. The settings below
# trade ~3-4× longer build time (≈ 10-15 m vs. ≈ 3-4 m) for:
#   - `lto = "fat"`     — cross-crate inlining + dead-code stripping.
#       Particularly important here because `neoethos-app` still links
#       the old egui UI tree (task #89 will delete it) which is never
#       exercised in `--server` mode; fat LTO lets the linker drop the
#       unreached code paths.
#   - `codegen-units = 1` — single LLVM module so LTO can see everything.
#   - `strip = "symbols"` — drop DWARF + Windows debug symbols. Stack
#       traces in panic messages are kept (panic infrastructure is
#       separate); only symbol *names* go. ~30% size win on Windows.
#   - `panic = "abort"`  — no `catch_unwind` machinery in the binary;
#       any panic aborts the process. We never call `catch_unwind` and
#       the tokio runtime is configured to fail fast on worker panics,
#       so this is purely a code-size + perf win.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Build dependencies (build.rs scripts, proc-macros) should keep their
# default profile — they run during the build, never ship. Override
# back to dev defaults to avoid paying the LTO cost on every recompile
# of e.g. `protoc-bin-vendored`.
[profile.release.build-override]
opt-level = 0
codegen-units = 16

[patch.crates-io]
lightgbm3-sys = { path = "vendor/lightgbm3-sys" }
# sklears-core patch removed 2026-05-21 (task #84) — the vendored copy
# was the stale v0.1.0 release and got bypassed once sklears upstream
# published 0.1.1 (which lifts the scirs2 stack to v0.4.4). Cargo was
# warning every build that the patch was not used. If we ever need to
# patch sklears-core again, regenerate the vendor copy at the version
# the crate graph actually resolves to.
rlkit = { path = "vendor/rlkit" }
