[workspace]
resolver = "3"
members = [
  "crates/neoethos-search",
  "crates/neoethos-cli",
  "crates/neoethos-data",
  "crates/neoethos-models",
  "crates/neoethos-core",
  "crates/neoethos-app",
  "crates/neoethos-codex",
  "crates/neoethos-trader",
  # Tauri desktop shell (single-process replacement for the Flutter+HTTP
  # split). Shares target/ so it links the already-built neoethos-* rlibs
  # instead of recompiling the whole dep tree. Deliberately NOT in
  # default-members: plain `cargo build` stays lean; build via
  # `cargo tauri dev/build` or `-p neoethos-desktop`.
  "desktop/src-tauri",
]
default-members = [
  "crates/neoethos-search",
  "crates/neoethos-cli",
  "crates/neoethos-data",
  "crates/neoethos-models",
  "crates/neoethos-core",
  "crates/neoethos-app",
  "crates/neoethos-codex",
  "crates/neoethos-trader",
]
# The P2P mesh sidecar (Federation Phase 1+) is DELIBERATELY isolated: its own
# workspace + Cargo.lock under mesh/, so its bleeding-edge iroh/QUIC dependency
# tree can never conflict with this workspace's pinned GPU/ML stack. Excluded
# here so no root `cargo` command ever pulls it into the engine's build.
exclude = ["mesh", "mcp"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"

# ── Shared dependency versions (pinned once for the whole workspace) ──────────
[workspace.dependencies]
anyhow      = "1.0.100"
chrono      = { version = "0.4.44", features = ["serde"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"
tokio       = { version = "1.49.0", features = ["full"] }
tracing     = "0.1.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ndarray     = { version = "0.17.2", features = ["rayon"] }
rayon       = "1.11.0"
# reqwest >= 0.13.3 logs only the host, not the full URL — protects client_secret from leaking to debug/trace logs.
# In 0.13, `form`/`query` are opt-in features (per the 0.13.0 CHANGELOG).
reqwest     = { version = "0.13.3", default-features = true, features = ["rustls", "json", "query", "form", "cookies"] }
rand        = "0.9.2"
nalgebra    = "0.33.0"
polars      = { version = "0.52.0", features = ["lazy", "dtype-datetime", "timezones"] }
thiserror   = "2.0.16"

# ── Release profile — public-testing distribution ────────────────────────────
# Defaults give opt-level=3 but leave LTO off, codegen-units=16, debug
# symbols inside the binary, and panic=unwind. For a public-testing
# release the bin is ~111 MB with that default. The settings below
# trade ~3-4× longer build time (≈ 10-15 m vs. ≈ 3-4 m) for:
#   - `lto = "fat"`     — cross-crate inlining + dead-code stripping.
#       Particularly important here because `neoethos-app` still links
#       the old egui UI tree (task #89 will delete it) which is never
#       exercised in `--server` mode; fat LTO lets the linker drop the
#       unreached code paths.
#   - `codegen-units = 1` — single LLVM module so LTO can see everything.
#   - `strip = "symbols"` — drop DWARF + Windows debug symbols. Stack
#       traces in panic messages are kept (panic infrastructure is
#       separate); only symbol *names* go. ~30% size win on Windows.
#   - `panic = "unwind"` — **MUST** be unwind, not abort. The comment
#       below the previous line claimed "we never call catch_unwind"
#       but `crates/neoethos-data/src/core/hpc_ta.rs:89,194` DOES call
#       it as the documented #212 fix for vector-ta-0.2.9's
#       "warm prefix exceeds row width" panic. Under panic=abort,
#       catch_unwind is a no-op and the panic kills the entire backend
#       process the moment Discovery touches a marginal (indicator,
#       row_count) combination. Live-repro 2026-05-26 confirmed the
#       backend crashing on every Discovery start because of this
#       contradiction. Cost of unwind: ~3-5% perf overhead on the
#       happy path + ~10 MB binary growth — acceptable trade for not
#       killing the process on a recoverable indicator panic.
# ── Dev profile — local debug builds + tests ─────────────────────────────────
# `debug = "line-tables-only"` instead of the default full DWARF. The workspace
# binary is enormous (neoethos-app links ~260 object files across the whole
# crate graph: polars, burn/cubecl, candle, the tree-model FFI, arrow, etc.).
# Full type info pushes the monolithic Windows PDB past the MSVC linker's
# internal cap and the link dies with `LNK1318: Unexpected PDB error; LIMIT (12)`
# — so `cargo build` / `cargo test` could not link locally at all. Line-tables
# keep panic backtraces (file:line) working while dropping the type-record
# streams that overflow the PDB, so debug builds link again. The shipped
# artifact is unaffected — `[profile.release]` strips symbols entirely (no PDB).
[profile.dev]
debug = "line-tables-only"

[profile.release]
# agent 2026-06-05 (operator decision): dropped `lto = "fat"` + `codegen-units = 1`.
# They cost ~3-4x compile/link time (full-program LTO of the 100MB+ binary) for a
# marginal runtime gain — the GA hot loop lives inside ONE crate (neoethos-search)
# and is already optimised at opt-level=3 regardless of cross-crate LTO. A
# ~120-150MB binary is fine for GitHub + the shipped installer, and iteration
# (incl. the VPS rebuild) becomes dramatically faster.
lto = "thin"          # operator 2026-06-05: thin LTO (not fat) — cross-crate
                      # inlining for faster code, but a fraction of fat's
                      # compile cost (and mold + -Zthreads below offset it).
codegen-units = 16
strip = "symbols"
panic = "unwind"

# Build dependencies (build.rs scripts, proc-macros) should keep their
# default profile — they run during the build, never ship. Override
# back to dev defaults to avoid paying the LTO cost on every recompile
# of e.g. `protoc-bin-vendored`.
[profile.release.build-override]
opt-level = 0
codegen-units = 16

[patch.crates-io]
lightgbm3-sys = { path = "vendor/lightgbm3-sys" }
# sklears-core RE-VENDORED 2026-07-12 at v0.1.1. Upstream 0.1.1 calls
# the linux-only `read_perf_counters()` unconditionally on x86_64, so it
# does not COMPILE on Windows/macOS (E0599 — caught by the first real CI
# release run). The fix had previously been applied by editing the crate
# IN THE LOCAL CARGO REGISTRY CACHE — invisible, lost on any cache clean,
# and the reason local builds passed while CI failed. The vendored copy
# carries that patch (zeroed CacheStats fallback on non-linux, marked
# "Patched:" in src/benchmarking.rs) the honest, reproducible way.
sklears-core = { path = "vendor/sklears-core" }
rlkit = { path = "vendor/rlkit" }
# **vector-ta 2026-05-26**: patched local copy with a one-line fix to
# `utilities/helpers.rs:159` — replaced
#   `assert!(warm <= cols, "warm prefix exceeds row width");`
# with a `let warm = warm.min(cols);` clamp. The original asserted
# semantic was inconsistent with the sibling `alloc_with_nan_prefix`
# (line 106) which already clamps, and aborted the discovery worker
# whenever a single-output indicator (cols=1) emitted a row-count-
# style warm value. Reported upstream to VectorAlpha-dev/VectorTA;
# remove this patch entry once the upstream crate ships a fix.
vector-ta = { path = "vendor/vector-ta-0.2.9-patched" }
