[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forex_bot"
version = "0.1.0"
description = "Forex Trading Bot with Refactored Architecture"
authors = [{name = "Konstantin", email = "konst@example.com"}]
requires-python = ">=3.12"
dependencies = [
    # Core Scientific Computing (2026 targets)
    "numpy>=2.3.4,<3.0.0",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "scikit-learn>=1.8.0",  # 1.8.2 not yet published for Py3.13; relax to available max
    "joblib>=1.5.2",

    # Networking & Data
    "requests>=2.32.5",
    "feedparser>=6.0.12",
    "PyYAML>=6.0.3",

    # Visualization
    "matplotlib>=3.10.7",

    # System & Performance
    "psutil>=7.1.0",
    "numba>=0.62.1",

    # Trading Platform
    "MetaTrader5>=5.0.5200; sys_platform == 'win32'",
    "TA-Lib>=0.6.7",

    # ML/AI - Tree-based Models
    "lightgbm>=4.6.0",
    "xgboost>=3.1.5",
    "catboost>=1.2.7",

    # ML/AI - Reinforcement Learning
    "tianshou>=1.2.0",
    "gymnasium>=1.2.1",
    "stable-baselines3>=2.7.0",
    "shimmy>=2.0.0",
    "tensorboard>=2.20.0",

    # ML/AI - Evolution Strategies
    "cma>=4.4.1",

    # ML/AI - Deep Learning (PyTorch 2.10 ecosystem)
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",

    # ML/AI - Inference & Deployment
    "onnxruntime>=1.24.0",

    # ML/AI - NLP & Transformers
    "transformers>=5.2.0",
    "openai>=2.24.0",
    
    # ML/AI - Research Implementations (GPU Optimized)
    "pytorch-tabnet>=4.1.0",
    "efficient-kan @ git+https://github.com/Blealtan/efficient-kan.git",

    # Configuration & Validation
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",

    # Utilities
    "numexpr>=2.12.1",
    "threadpoolctl>=3.6.0",
    "py-cpuinfo>=9.0.0"
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.6.0",
]
dev = [
    "black>=25.9.0",
    "ruff>=0.15.3",
    "mypy>=1.18.2",
    "memory-profiler>=0.61.0"
]

[tool.setuptools.packages.find]
where = ["src"]

# Black formatter configuration
[tool.black]
line-length = 120
target-version = ["py313"]
include = '\.pyi?$'

# Ruff linter configuration
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["N803", "N806"]

# MyPy type checker configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "6.0"
addopts = "-rsxX -l --tb=short --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "rust: marks tests that require Rust extensions (deselect with '-m \"not rust\"')",
]
