[package]
name = "forex-app"
version = "0.2.0"
edition.workspace = true

[features]
default = []
gpu = ["forex-search/gpu", "forex-models/neuro-evolution-gpu", "forex-models/statistical-gpu"]

[dependencies]
eframe = "0.31.0" # UI framework (egui)
egui = "0.31.0"
egui_dock = "0.16.0"
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.100"
keyring = "3.6.3"
open = "5.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.20"
dirs = "5.0.1"
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
futures = "0.3.31"
protobuf = "4.31.1-release"



polars = { version = "0.52.0", features = ["lazy", "dtype-full", "temporal", "timezones"] }

# Our internal core engines
forex-core = { path = "../forex-core" }
forex-data = { path = "../forex-data" }
forex-search = { path = "../forex-search" }
forex-models = { path = "../forex-models", features = ["tree-models", "pure-rust-ml"] }
ndarray = "0.17.2"
clap = { version = "4.6.0", features = ["derive"] }
num_cpus = "1.17.0"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
cc = "1.2.14"


[package.metadata.packager]
product_name = "ForexAI"
identifier = "com.forexai.app"
authors = ["Konstantinos Red"]
description = "Advanced Algorithmic Forex Terminal with ML and Live Execution"
formats = ["nsis"]
resources = ["config.yaml", "catboostmodel.dll", "xgboost.dll"]

[[package.metadata.packager.binaries]]
path = "forex-app"
main = true
